ALPHA 0.0.11 - April 27, 2025
- Added tooltips for buttons on the home screen
- You can press 'o' and 'p' to adjust FOV in PvE. This is a temporary feature.

ALPHA 0.0.10 - April 26, 2025
- Added non-functioning settings
- Canvas now resizes properly when your browser size changes
- Home screen background now scales correctly
- Added FOV to PvE
- Added notifications

ALPHA 0.0.9 - April 25, 2025
- Fixed bullet jitter in PvE

ALPHA 0.0.8 - April 24, 2025
- FFA server tick time is now rounded to 1 decimal place
- Significant bandwidth optimization in FFA

ALPHA 0.0.7 - April 23, 2025
- Added joining server waiting screen
- Added shape collision
- Added enemy collision
- Added shape movement
- Added shape mass
- Added shape, enemy, and bullet whitening when hit
- Improved the bot colors
- Fixed a flexbox bug
- Added more respawning functionality
- Changed shape xp to scenexe's
- Added time played to the death screen
- Score is now abbreviated

ALPHA 0.0.6 - April 22, 2025
- Home screen looks more like scenexe now
- Added player spawn particle effect, removed shape death particle effect
- Improved death screen, added continue button
- Added shape hitbox and name to the debug mode
- Added more info to the debug

ALPHA 0.0.5 - April 21, 2025
- Added some animation when changing gamemode
- Fixed the background grid
- Improved the home screen canvas render

ALPHA 0.0.4 - April 19, 2025
- Made changes to the home screen
- You can now press m to toggle debug

ALPHA 0.0.3 - April 18, 2025
- Added player healing (6 sec delay, 8 sec full healing)
- Changed the debug to mimic rocketer
- Added a minimap
- Bullets can now pass through objects (added penetration)
- Nerfed basic's damage
- Added all shapes up until tetradecagon
- Added spawning chances for different shapes
- Fixed drawing sequence (shapes now drawn at the bottom, particles rendered last)
- Fixed rotation speed

ALPHA 0.0.2 - April 15, 2025
- Added a death screen and respawning
- Added a simple home screen
